# omie-python

./: LICENSE  README.md  exemplo.py  pyproject.toml  requirements.txt
examples/: get_dre.py  get_pedidos_entre.py  get_pedidos_mes.py  listar_etapas_fat.py  listar_etapas_pedido.py
omie/: __init__.py  client.py  exceptions.py  methods.py  schemas.py
